aws-terraform/modules/network_layer/sg.tf
#
# Security Groups
#
resource "aws_security_group" "bastion_allow_ssh" {
  vpc_id      = aws_vpc.testytesty_vpc.id
  name        = "bastion-allow-ssh"
  description = "security group that allows ssh and all egress traffic"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
